--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="src/css/tokens.css">
-    <link rel="stylesheet" href="src/css/main.css">
+    <link rel="stylesheet" href="src/css/tokens.css?v=20260217">
+    <link rel="stylesheet" href="src/css/main.css?v=20260217">
 </head>
 
 <body>
@@ -832,16 +832,21 @@
     <!-- ═══════════════════════════════════════════════════════
        SCRIPTS (deferred)
        ═══════════════════════════════════════════════════════ -->
-    <script src="src/js/motion.js" defer></script>
-    <script src="src/js/app.js" defer></script>
-    <script src="src/js/carousel.js" defer></script>
-    <script src="src/js/game.js" defer></script>
+    <script src="src/js/motion.js?v=20260217" defer></script>
+    <script src="src/js/app.js?v=20260217" defer></script>
+    <script src="src/js/carousel.js?v=20260217" defer></script>
+    <script src="src/js/game.js?v=20260217" defer></script>
 
     <!-- Service Worker Registration -->
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('sw.js').catch(() => { });
+                navigator.serviceWorker.register('/sw.js?v=20260217').then((registration) => {
+                    // Check for updates every 60 seconds
+                    setInterval(() => {
+                        registration.update();
+                    }, 60000);
+                }).catch(() => { });
             });
         }
     </script>
